# clip_studio_paint_discord_RPC

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_config.rs  app_state.rs  capture_share.rs  clip_studio.rs  discord_presence.rs  lib.rs  main.rs
